Thu Sep 16 23:20:05 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkselection.c (selection_get_text_plain): 
	* gdk/x11/gdkselection-x11.c (make_list): Warn if a UTF8_STRING
	or text/plain;charset=utf-8 roperty contains invalid 
	UTF-8.  (#152845, Owen Taylor)

2004-09-16  Matthias Clasen  <mclasen@redhat.com>

	Fix #152760, Christian Persch:
	
	* gtk/gtkaboutdialog.c (gtk_about_dialog_finalize): Don't free
	private data.
	(gtk_about_dialog_set_translator_credits): Recommend the msg
	id translator-credits.
	(display_credits_dialog): Show translator credits if they're
	translated, not if they're untranslated.

Thu Sep 16 02:07:56 2004  Jonathan Blandford  <jrb@gnome.org>

	* docs/tools/widgets.c (create_icon_view): load images at normal
	size.

	* docs/reference/gtk/images/*png: Update shots.

Thu Sep 16 00:33:11 2004  Jonathan Blandford  <jrb@gnome.org>

	* docs/tools/widgets.c (new_widget_info): Add constrained sizing
	to the widgets.  This gives us all images running the same size,
	which will make the table layout look better.

2004-09-15  Tor Lillqvist  <tml@iki.fi>

	* gdk/win32/gdkwindow-win32.c (gdk_window_get_frame_extents):
	Remove bogus code that tried to do what the X11 backend does in
	its version of this function. There are no "frame windows" (for
	toplevel window decoration) on Windows. The desktop ("root")
	window is not the parent of a toplevel window. (#152481)

2004-09-15  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Update.

Wed Sep 15 00:57:37 2004  Matthias Clasen  <maclas@gmx.de>

	* docs/tools/widgets.c: Add accel label, file button
	and icon view.

Tue Sep 14 22:01:49 2004  Matthias Clasen  <maclas@gmx.de>

	* configure.in: New option --disable-visibility to disable
	the use of ELF visibility attributes for PLT reduction.

	* gtk/makegtkalias.pl: 
	* gdk/makegdkalias.pl: Respect the DISABLE_VISIBILITY
	define.

Tue Sep 14 23:20:56 2004  Søren Sandmann  <sandmann@redhat.com>

	* gtk/gtkaction.c (connect_proxy): Call