@@ -83,11 +83,11 @@ linkend="PangoMarkupFormat">complete documentation</link> of available
 tags in the Pango manual.)
 </para>
 <para>
-The markup passed to gtk_label_set_markup() must be valid; for
-example, literal &lt;/&gt;/&amp; characters must be escaped as 
-&amp;lt;, &amp;gt;, and &amp;amp;. If you pass text obtained from 
-the user, file, or a network to gtk_label_set_markup(), 
-you'll want to escape it with g_markup_escape_text().
+The markup passed to gtk_label_set_markup() must be valid; for example,
+literal &lt;/&gt;/&amp; characters must be escaped as &amp;lt;,
+&amp;gt;, and &amp;amp;. If you pass text obtained from the user, file,
+or a network to gtk_label_set_markup(), you'll want to escape it with
+g_markup_escape_text() or g_markup_printf_escaped().
 </para>
 <para>
 Markup strings are just a convenient way to set the #PangoAttrList on
